fix(shs-5790): missing padding after load more postcards

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_pattern.grid.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_pattern.grid.scss
@@ -37,7 +37,7 @@
 
   &:not(:first-child) {
     .views-infinite-scroll-content-wrapper & {
-      margin-top: hb-spacing-width();
+      padding-top: hb-spacing-width();
     }
   }
 
